<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Decision Making</string>
    <string name="title_setup_candidates">Candidates</string>
    <string name="title_setup_attributes">Attributes</string>
    <string name="title_setup_profiles">Profiles</string>
    <string name="title_setup_judges">Judges</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit">Edit: </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_add">Add</string>
    <string name="action_remove">Remove</string>
    <string name="title_activity_compare">CompareActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="candidate">Candidate</string>
    <string name="attribute">Attribute</string>
    <string name="profile">Profile</string>
    <string name="judge">Judge</string>
    <string name="hint_add_dialog">Enter name</string>
    <string name="new_candidate">New Candidate</string>
    <string name="new_attribute">New Attribute</string>
    <string name="new_profile">New Profile</string>
    <string name="new_judge">New Judge</string>
    <string name="profiles">Profiles</string>
    <string name="attributes">Attributes</string>
    <string name="setup">Setup</string>
    <string name="results">Results</string>
    <string name="candidates">Candidates</string>
    <string name="judges">Judges</string>
    <string name="save">Save</string>
    <string name="action_import">Import</string>
    <string name="action_clear">Clear All</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="instance_new">New Instance</string>
    <string name="hint_instance_name">Enter name</string>
    <string name="hint_file_name">Enter file name</string>
    <string name="action_check_consistency">Check Consistency</string>
    <string name="action_edit_instance">Edit</string>
    <string name="action_open_instance">Open</string>
    <string name="insufficient_elements">Insuficient %s</string>
    <string name="import_file">Import File</string>
    <string name="candidates_per_profile">Candidates per Profile</string>
    <string name="candidates_per_attribute">Candidates per Attribute</string>
    <string name="attributes_per_profile">Attributes per Profile</string>
    <string name="attributes_per_candidate">Attributes per Candidate</string>
    <string name="profiles_per_attribute">Profiles per Attribute</string>
    <string name="profiles_per_candidate">Profiles per Candidate</string>
    <string name="new_or_load_message">Save file not found. What to do?</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="load_instance">Load Instance</string>
    <string name="new_instance">New Instance</string>
    <string name="save_changes">SAVE</string>
    <string name="discard_changes">DISCARD</string>
    <string name="enter_instance_name">Enter Instance name</string>

</resources>
