<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="156dp"
    android:background="@drawable/bg_header"
    android:weightSum="1"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="changeDrawerList">

        <TextView
            android:id="@+id/instanceNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:ellipsize="end"
            android:singleLine="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_candidate"
                android:contentDescription="@string/candidates" />

            <TextView
                android:id="@+id/candidatesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Header.ElementText"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_attribute"
                android:contentDescription="@string/attributes" />

            <TextView
                android:id="@+id/attributesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Header.ElementText"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_profile"
                android:contentDescription="@string/profiles" />

            <TextView
                android:id="@+id/profilesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Header.ElementText"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_judge"
                android:contentDescription="@string/judges" />

            <TextView
                android:id="@+id/judgesText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Header.ElementText"/>

            <ImageView
                android:id="@+id/drawerLayoutIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="Swap Drawer"
                android:src="@drawable/ic_keyboard_arrow_down_white_18dp"/>

            </LinearLayout>
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@color/accentColor"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_alignParentRight="true"
        android:id="@+id/circleView"
        />


</RelativeLayout>