<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Header -->

    <TextView
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        style="@style/Header"
        android:text="Instance Name"
        android:id="@+id/instance_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="C:10 "
            android:id="@+id/candidates_text"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="A:4 "
            android:id="@+id/attributes_text"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="P:3 "
            android:id="@+id/profiles_text"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="J:2"
            android:id="@+id/judges_text"/>

        <!-- TODO: Edit button -->

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="?android:attr/dividerHorizontal"/>

    <!-- Attributes  -->

    <TextView
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        style="@style/SubHeader"
        android:text="@string/attributes"/>

    <!-- TODO: replace this with a List View -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/attributes_list">
        <include layout="@layout/item_drawer_item"/>
        <include layout="@layout/item_drawer_item"/>
        <include layout="@layout/item_drawer_item"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="?android:attr/dividerHorizontal"/>

    <!-- Profiles -->

    <TextView
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        style="@style/SubHeader"
        android:text="@string/profiles"/>

    <!-- TODO: replace by ListView -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/profiles_list">
        <include layout="@layout/item_drawer_item"/>
        <include layout="@layout/item_drawer_item"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="?android:attr/dividerHorizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dropDownListPreferredItemHeight"
        android:paddingLeft="16dp"
        android:gravity="center_vertical"
        android:textColor="#000000"
        android:text="@string/results"
        android:drawablePadding="32dp"
        android:drawableLeft="@drawable/ic_assessment_grey600_24dp"
        android:drawableStart="@drawable/ic_assessment_grey600_24dp"
        />


</LinearLayout>